crates/pg_syntax/tests/snapshots/postgres_regress/truncate@90.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE FUNCTION trunctrigger() RETURNS trigger as $$\ndeclare c bigint;\nbegin\n    execute 'select count(*) from ' || quote_ident(tg_table_name) into c;\n    insert into trunc_trigger_log values\n      (TG_OP, TG_LEVEL, TG_WHEN, TG_ARGV[0], tg_table_name, c);\n    return null;\nend;\n$$ LANGUAGE plpgsql;"
---
CreateFunctionStmt@0..298
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Function@7..15 "FUNCTION"
  Whitespace@15..16 " "
  Ident@16..28 "trunctrigger"
  Ascii40@28..29 "("
  Ascii41@29..30 ")"
  Whitespace@30..31 " "
  Returns@31..38 "RETURNS"
  Whitespace@38..39 " "
  TypeName@39..46
    Trigger@39..46 "trigger"
  Whitespace@46..47 " "
  DefElem@47..280
    As@47..49 "as"
    Whitespace@49..50 " "
    List@50..280
      Sconst@50..280 "$$\ndeclare c bigint;\n ..."
  Whitespace@280..281 " "
  DefElem@281..297
    Language@281..289 "LANGUAGE"
    Whitespace@289..290 " "
    Ident@290..297 "plpgsql"
  Ascii59@297..298 ";"

