crates/pg_syntax/tests/snapshots/postgres_regress/truncate@99.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: truncate trunc_trigger_log;
---
TruncateStmt@0..27
  Truncate@0..8 "truncate"
  Whitespace@8..9 " "
  RangeVar@9..26
    Ident@9..26 "trunc_trigger_log"
  Ascii59@26..27 ";"

