crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@101.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT phraseto_tsquery('hunspell_tst', 'footballyklubber sky');"
---
SelectStmt@0..64
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..62
    FuncCall@7..62
      Ident@7..23 "phraseto_tsquery"
      Ascii40@23..24 "("
      AConst@24..38
        Sconst@24..38 "'hunspell_tst'"
      Ascii44@38..39 ","
      Whitespace@39..40 " "
      AConst@40..62
        Sconst@40..62 "'footballyklubber sky'"
  Ascii41@62..63 ")"
  Ascii59@63..64 ";"

