crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@104.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_tsquery('hunspell_tst', 'footballklubber');"
---
SelectStmt@0..53
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..51
    FuncCall@7..51
      Ident@7..17 "to_tsquery"
      Ascii40@17..18 "("
      AConst@18..32
        Sconst@18..32 "'hunspell_tst'"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AConst@34..51
        Sconst@34..51 "'footballklubber'"
  Ascii41@51..52 ")"
  Ascii59@52..53 ";"

