crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@109.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_tsquery('hunspell_tst', 'footballyklubber:b & rebookings:A & sky');"
---
SelectStmt@0..77
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..75
    FuncCall@7..75
      Ident@7..17 "to_tsquery"
      Ascii40@17..18 "("
      AConst@18..32
        Sconst@18..32 "'hunspell_tst'"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AConst@34..75
        Sconst@34..75 "'footballyklubber:b & ..."
  Ascii41@75..76 ")"
  Ascii59@76..77 ";"

